2002-02-06  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (drag_data_received): remove \n\r in the end of url's
	(drag_data_received): allow dropping of uri lists instead of just
	one uri, implemented image dropping

2002-02-05  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (realize): changed defaults to all
	(drag_data_received): when dropped on selection, it pastes over it
	fix cursor position

2002-01-31  Radek Doulik  <rodo@ximian.com>

	* keybindingsrc.*: removed paragraph formatting bindings, so now
	it works thru menu bindings

2002-01-29  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c: added close_flow to few places to avoid empty
	clueflows in tree

	* htmlselection.c (html_engine_select_all): as below

	* htmlengine-edit-cut-and-paste.c (html_engine_copy_object): check
	if e->clue is not empty

2002-01-28  Radek Doulik  <rodo@ximian.com>

	* htmlengine-print.c (print_page): fix header printing

2002-01-27  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.h: add set_title prototype.

	* gtkhtml.c: add gtk_html_set_title to match gtk_html_get_title.

2002-01-25  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit.c (html_engine_set_title): new method for title setting

2002-01-24  Larry Ewing  <lewing@ximian.com>

	* htmlpainter.c: remove uneeded semicolons after
	DEFINE_UNIMPLEMENTED definitions.  They are spurious and cause
	some compilers to complain.  Thanks to Tim Mooney
	<mooney@dogbert.cc.ndsu.nodak.edu> for the patch.  Fixes
	http://bugzilla.ximian.com/show_bug.cgi?id=19189
	
2002-01-14  Larry Ewing  <lewing@ximian.com>

	* htmlengine-edit-cursor.c (html_engine_draw_cursor_in_area): wrap
	im call in #ifdef GTK_HTML_USE_XIM

2002-01-14  Radek Doulik  <rodo@ximian.com>

	* keybindingsrc.*: bind style-itemalpha command

	* gtkhtml.c (command): implement style-itemalpha command

2002-01-11  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (get_offset_for_pointer): optimized to use word
	width cache

2002-01-10  Radek Doulik  <rodo@ximian.com>
