@@ -1,3 +1,8 @@
+2002-02-11  Larry Ewing  <lewing@ximian.com>
+
+	* htmltokenizer.c (in_script_or_style): fix obvious error in
+	growing the scriptCode buffer, use g_realloc instead.
+
 2002-02-06  Radek Doulik  <rodo@ximian.com>
 
 	* gtkhtml.c (drag_data_received): remove \n\r in the end of url's
